welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: identifier expected but ')' found.
for (i<-0 to ((T.length.)-1))){
                        ^indexOfValue:2: error: illegal start of simple expression
for (i<-0 to ((T.length.)-1))){
                             ^